--- a/index.html.html
+++ b/index.html.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=0,maximum-scale=10,user-scalable=yes,viewport-fit=cover">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="유인용 포트폴리오">
+	<meta property="og:site_name" content="유인용 포트폴리오">
+	<meta property="og:url" content="https://amanda-yoo.github.io/2023_portfolio">
+	<meta property="og:image" content="./include/img/og_image.png">
     <title>유인용 포트폴리오</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Rubik:wght@300;400;500;600;700&display=swap">
@@ -124,7 +129,7 @@
 							<img src="./include/img/project_00.png" alt="">
 							<div class="exp-info js-exp-info">
 								<div class="exp-text">
-									<a class="exp-tit" href="#n" title="[새창] " target="_blank">대한스트레스학회</a>
+									<a class="exp-tit" href="#n">대한스트레스학회</a>
 									<span>퍼블 기여도 100%</span>
 									<span class="exp-type">신규 구축</span>
 									<span class="exp-notopen">미오픈</span>
@@ -135,7 +140,7 @@
 							<img src="./include/img/project_01.png" alt="">
 							<div class="exp-info js-exp-info">
 								<div class="exp-text">
-									<a href="#n" class="exp-tit" title="[새창] 대한내분비외과학회" target="_blank">대한내분비외과학회</a>
+									<a href="#n" class="exp-tit">대한내분비외과학회</a>
 									<span>퍼블 기여도 100%</span>
 									<span class="exp-type">레거시</span>
 									<span class="exp-notopen">미오픈</span>
@@ -146,7 +151,7 @@
 							<img src="./include/img/project_02.png" alt="">
 							<div class="exp-info js-exp-info">
 								<div class="exp-text">
-									<a class="exp-tit" href="#n" title="[새창] " target="_blank">한국혈전지혈학회</a>
+									<a class="exp-tit" href="#n">한국혈전지혈학회</a>
 									<span>퍼블 기여도 100%</span>
 									<span class="exp-type">신규 구축</span>
 									<span class="exp-notopen">미오픈</span>
@@ -197,9 +202,9 @@
 							<img src="./include/img/project_07.png" alt="">
 							<div class="exp-info js-exp-info">
 								<div class="exp-text">
-								<a class="exp-tit" href="https://www.ksvs.org/" title="[새창] 대한혈관외과학회" target="_blank">대한혈관외과학회</a>
-								<span>퍼블 기여도 100%</span>
-								<span class="exp-type">레거시</span>
+									<a class="exp-tit" href="https://www.ksvs.org/" title="[새창] 대한혈관외과학회" target="_blank">대한혈관외과학회</a>
+									<span>퍼블 기여도 100%</span>
+									<span class="exp-type">레거시</span>
 								</div>
 							</div>
 						</div>
@@ -237,7 +242,7 @@
 							<img src="./include/img/project_09.png" alt="서울특별시치과의사회">
 							<div class="exp-info js-exp-info">
 								<div class="exp-text">
-									<a class="exp-tit" href="#n" title="[새창] 서울특별시치과의사회" target="_blank">서울특별시치과의사회</a>
+									<a class="exp-tit" href="#n">서울특별시치과의사회</a>
 									<span>퍼블 기여도 100%</span>
 									<span class="exp-type">신규 구축</span>
 									<span class="exp-notopen">미오픈</span>
