favicon 추가 및 script.js 수정

--- a/index.html.html
+++ b/index.html.html
@@ -38,7 +38,8 @@
 		</nav>
 	</header>
 
-	<section class="cover-contents" id="main">
+	<section class="cover-contents js-cover-contents" id="main">
+		<div class="cover-bg js-cover-bg"></div>
 		<article class="cover-wrap cf">
 			<p class="cover-tit js-cover-tit">Portfolio.</p>
 			<h2 class="cover-typing js-cover-typing"></h2>
@@ -129,7 +130,7 @@
 							<img src="./include/img/project_00.png" alt="">
 							<div class="exp-info js-exp-info">
 								<div class="exp-text">
-									<a class="exp-tit" href="#n">대한스트레스학회</a>
+									<a class="exp-tit" href="#n" title="홈페이지 오픈 전입니다">대한스트레스학회</a>
 									<span>퍼블 기여도 100%</span>
 									<span class="exp-type">신규 구축</span>
 									<span class="exp-notopen">미오픈</span>
@@ -140,7 +141,7 @@
 							<img src="./include/img/project_01.png" alt="">
 							<div class="exp-info js-exp-info">
 								<div class="exp-text">
-									<a href="#n" class="exp-tit">대한내분비외과학회</a>
+									<a href="#n" class="exp-tit" title="홈페이지 오픈 전입니다">대한내분비외과학회</a>
 									<span>퍼블 기여도 100%</span>
 									<span class="exp-type">레거시</span>
 									<span class="exp-notopen">미오픈</span>
@@ -151,7 +152,7 @@
 							<img src="./include/img/project_02.png" alt="">
 							<div class="exp-info js-exp-info">
 								<div class="exp-text">
-									<a class="exp-tit" href="#n">한국혈전지혈학회</a>
+									<a class="exp-tit" href="#n" title="홈페이지 오픈 전입니다">한국혈전지혈학회</a>
 									<span>퍼블 기여도 100%</span>
 									<span class="exp-type">신규 구축</span>
 									<span class="exp-notopen">미오픈</span>
