--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:url" content="https://amanda-yoo.github.io/2023_portfolio">
 	<meta property="og:image" content="./include/img/og_image.png">
     <title>유인용 포트폴리오</title>
-	<link rel="shortcut icon" href="/favicon.ico">
+	<link rel="shortcut icon" href="./include/img/favicon.ico">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Rubik:wght@300;400;500;600;700&display=swap">
 	<link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
