--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:url" content="https://amanda-yoo.github.io/2023_portfolio">
 	<meta property="og:image" content="./include/img/og_image.png">
     <title>유인용 포트폴리오</title>
-	<link rel="shortcut icon" href="./include/img/favicon.ico">
+	<link rel="shortcut icon" href="/favicon.ico">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Rubik:wght@300;400;500;600;700&display=swap">
 	<link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
@@ -56,7 +56,7 @@
 			<div class="main-conbox">
 				<h3>WHO</h3>
 				<p>
-					안녕하세요. 3년차 퍼블리셔 유인용입니다. <br/>
+					안녕하세요. 3년차 퍼블리셔 유인용입니다 :)<br/>
 					의학계열 전문 웹에이전시에서 신규 구축 프로젝트를 주 업무로 진행하고 있습니다. <br/>
 					퍼블리셔는 웹페이지가 갖고 있는 컨텐츠를 더욱 도드라지게 만드는 역할을 합니다. <br/>
 					주목받는 웹페이지를 만드는 퍼블리셔가 되기를 고대하며 지원하게 되었습니다.
