--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 							<img src="./include/img/project_00.png" alt="">
 							<div class="exp-info js-exp-info">
 								<div class="exp-text">
-									<a class="exp-tit" href="#n" title="홈페이지 오픈 전입니다">대한스트레스학회</a>
+									<a href="javascript:alert('홈페이지 오픈 전입니다');" class="exp-tit" title="홈페이지 오픈 전입니다">대한스트레스학회</a>
 									<span>퍼블 기여도 100%</span>
 									<span class="exp-type">신규 구축</span>
 									<span class="exp-notopen">미오픈</span>
@@ -142,7 +142,7 @@
 							<img src="./include/img/project_01.png" alt="">
 							<div class="exp-info js-exp-info">
 								<div class="exp-text">
-									<a href="#n" class="exp-tit" title="홈페이지 오픈 전입니다">대한내분비외과학회</a>
+									<a href="javascript:alert('홈페이지 오픈 전입니다');" class="exp-tit" title="홈페이지 오픈 전입니다">대한내분비외과학회</a>
 									<span>퍼블 기여도 100%</span>
 									<span class="exp-type">레거시</span>
 									<span class="exp-notopen">미오픈</span>
@@ -153,7 +153,7 @@
 							<img src="./include/img/project_02.png" alt="">
 							<div class="exp-info js-exp-info">
 								<div class="exp-text">
-									<a class="exp-tit" href="#n" title="홈페이지 오픈 전입니다">한국혈전지혈학회</a>
+									<a href="javascript:alert('홈페이지 오픈 전입니다');" class="exp-tit" title="홈페이지 오픈 전입니다">한국혈전지혈학회</a>
 									<span>퍼블 기여도 100%</span>
 									<span class="exp-type">신규 구축</span>
 									<span class="exp-notopen">미오픈</span>
@@ -244,7 +244,7 @@
 							<img src="./include/img/project_09.png" alt="서울특별시치과의사회">
 							<div class="exp-info js-exp-info">
 								<div class="exp-text">
-									<a class="exp-tit" href="#n">서울특별시치과의사회</a>
+									<a href="javascript:alert('홈페이지 오픈 전입니다');" class="exp-tit" title="홈페이지 오픈 전입니다">서울특별시치과의사회</a>
 									<span>퍼블 기여도 100%</span>
 									<span class="exp-type">신규 구축</span>
 									<span class="exp-notopen">미오픈</span>
