--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="./include/css/xeicon.min.css">
 	<link rel="stylesheet" href="./include/css/common.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
 	<script src="./include/js/script.js"></script>
 </head>
 <body>
@@ -452,6 +452,6 @@
 		</div>
 	</div>
 
-	<script>AOS.init();</script>
+	<!-- <script>AOS.init();</script> -->
 </body>
 </html>
