--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="shortcut icon" href="./include/img/favicon.ico">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap">
-	<link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
+	<!-- <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"> -->
 	<link rel="stylesheet" href="./include/css/xeicon.min.css">
 	<link rel="stylesheet" href="./include/css/common.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
