--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 	<link rel="shortcut icon" href="./include/img/favicon.ico">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap">
-	<!-- <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"> -->
-	<link rel="stylesheet" href="./include/css/xeicon.min.css">
+	<link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
 	<link rel="stylesheet" href="./include/css/common.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-	<!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script src="./include/js/script.js"></script>
 </head>
 <body>
@@ -408,19 +407,19 @@
 				<h3 data-aos="fade-up">CONTACT</h3>
 				<div class="contact-conbox">
 					<dl data-aos="fade-right">
-						<dt><i class="xi-mobile"></i></dt>
+						<dt><img src="./include/img/ic_phone.svg" alt="tel"></dt>
 						<dd>
 							<a href="tel:010-9313-9467" title="tel : 010-9313-9467" target="_blank">010-9313-9467</a>
 						</dd>
 					</dl>
 					<dl data-aos="fade-right">
-						<dt><i class="xi-mail"></i></dt>
+						<dt><img src="./include/img/ic_mail.svg" alt="mail"></dt>
 						<dd>
 							<a href="mailto:yoo188@naver.com" title="mailto : yoo188@naver.com" target="_blank">yoo188@naver.com</a>
 						</dd>
 					</dl>
 					<dl data-aos="fade-right">
-						<dt><i class="xi-book"></i></dt>
+						<dt><img src="./include/img/ic_blog.svg" alt="blog"></dt>
 						<dd>
 							<a href="https://amanda.tistory.com" title="https://amanda.tistory.com" target="_blank">https://amanda.tistory.com</a>
 						</dd>
@@ -433,13 +432,13 @@
 			<p>Copyright 2023. Inyong Yoo All rights reserved.</p>
 		</div>
 
-		<a href="#n" class="btn-top js-btn-top"><i class="xi-angle-up-min"></i></a>
+		<a href="#n" class="btn-top js-btn-top"><img src="./include/img/ic_topbtn.svg" alt=""></a>
 	</section>
 
 	<div id="dim" class="js-dim"></div>
 	<div class="popup js-popup">
 		<div class="pop-head">
-			<a href="#n" class="btn-pop-close js-btn-pop-close"><i class="xi-close"></i></a>
+			<a href="#n" class="btn-pop-close js-btn-pop-close"><img src="./include/img/ic_close.svg" alt=""></a>
 		</div>
 		<div class="pop-body">
 			<div class="img-wrap">
@@ -452,6 +451,6 @@
 		</div>
 	</div>
 
-	<!-- <script>AOS.init();</script> -->
+	<script>AOS.init();</script>
 </body>
 </html>
