--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 	<link rel="shortcut icon" href="./include/img/favicon.ico">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap">
-	<link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
 	<link rel="stylesheet" href="./include/css/common.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script src="./include/js/script.js"></script>
 </head>
 <body>
@@ -53,8 +51,8 @@
 	<section class="main-contents js-main-contents" id="who">
 		<article class="who-wrap">
 			<div class="main-conbox">
-				<h3 data-aos="fade-up">WHO</h3>
-				<p data-aos="fade-up">
+				<h3>WHO</h3>
+				<p>
 					안녕하세요. 3년차 퍼블리셔 유인용입니다 :)<br/>
 					의학계열 전문 웹에이전시에서 신규 구축 프로젝트를 주 업무로 진행하고 있습니다. <br/>
 					퍼블리셔는 웹페이지가 갖고 있는 컨텐츠를 더욱 도드라지게 만드는 역할을 합니다. <br/>
@@ -65,21 +63,21 @@
 
 		<article class="what-wrap" id="what">
 			<div class="main-conbox">
-				<h3 data-aos="fade-up">WHAT</h3>
+				<h3>WHAT</h3>
 				<ul class="what-list">
-					<li data-aos="fade-up">
+					<li>
 						<strong>리뉴얼 구축</strong>
 						<p>
 							자사에서 개발한 SI 솔루션을 기반으로 메인페이지, 컨텐츠, 게시판, 회원가입 등으로 구성된 기업형 홈페이지 신규 구축 퍼블리싱 작업을 주 업무로 진행합니다. 형상 관리 도구로 Git 및 Eclipse를 사용하고 있습니다.
 						</p>
 					</li>
-					<li data-aos="fade-up">
+					<li>
 						<strong>레거시 구축</strong>
 						<p>
 							현재 운영 중인 홈페이지의 기존 개발 소스를 유지하며 프론트 디자인만 교체하는 레거시 프로젝트도 진행하고 있습니다. FTP를 연결하는 방식으로 작업했으며 PHP 개발 소스가 붙은 상태로 HTML 마크업과 CSS 및 Script를 새롭게 교체합니다.
 						</p>
 					</li>
-					<li data-aos="fade-up">
+					<li>
 						<strong>퍼블리싱 운영</strong>
 						<p>
 							구축 완료된 홈페이지의 컨텐츠를 교체하거나 새롭게 업데이트 하는 작업을 진행하기도 합니다. 클라이언트의 요청에 따라 일부 페이지만 신규로 작업하거나 운영팀의 퍼블리싱 업무를 서포트 하기도 합니다.
@@ -91,9 +89,9 @@
 
 		<article class="how-wrap" id="how">
 			<div class="main-conbox on">
-				<h3 data-aos="fade-up">HOW</h3>
+				<h3>HOW</h3>
 				<ul class="how-list">
-					<li data-aos="fade-right">
+					<li>
 						<div>
 							<strong>Simentic</strong>
 							<p>
@@ -101,7 +99,7 @@
 							</p>
 						</div>
 					</li>
-					<li data-aos="fade-right" data-aos-delay="400">
+					<li data-aos-delay="400">
 						<div>
 							<strong>By myself</strong>
 							<p>
@@ -109,7 +107,7 @@
 							</p>
 						</div>
 					</li>
-					<li data-aos="fade-right" data-aos-delay="800">
+					<li data-aos-delay="800">
 						<div>
 							<strong>Responsive</strong>
 							<p>
@@ -123,8 +121,8 @@
 
 		<article class="project-wrap" id="project">
 			<div class="main-conbox">
-				<h3 data-aos="fade-up">PROJECT</h3>
-				<div class="pro-tab-wrap" data-aos="fade-up">
+				<h3>PROJECT</h3>
+				<div class="pro-tab-wrap">
 					<ul class="pro-tab js-pro-tab">
 						<li class="on all"><a href="#n">All<span class="cnt">20</span></a></li>
 						<li class="new"><a href="#n">Renewal<span class="cnt">12</span></a></li>
@@ -136,7 +134,7 @@
 						<p class="legacy">*Legacy(레거시 프로젝트)는 <strong>운영 중인 홈페이지의 PHP 개발 소스를 유지하며 프론트 디자인만 리뉴얼</strong>한 홈페이지입니다.</p>
 					</div>
 				</div>
-				<div class="pro-list-wrap" data-aos="fade-up">
+				<div class="pro-list-wrap">
 					<div class="pro-list">
 						<div class="pro-conbox js-pro-conbox new">
 							<div class="img-wrap">
@@ -404,21 +402,21 @@
 
 		<article class="contact-wrap js-contact-wrap" id="contact">
 			<div class="main-conbox">
-				<h3 data-aos="fade-up">CONTACT</h3>
+				<h3>CONTACT</h3>
 				<div class="contact-conbox">
-					<dl data-aos="fade-right">
+					<dl>
 						<dt><img src="./include/img/ic_phone.svg" alt="tel"></dt>
 						<dd>
 							<a href="tel:010-9313-9467" title="tel : 010-9313-9467" target="_blank">010-9313-9467</a>
 						</dd>
 					</dl>
-					<dl data-aos="fade-right">
+					<dl>
 						<dt><img src="./include/img/ic_mail.svg" alt="mail"></dt>
 						<dd>
 							<a href="mailto:yoo188@naver.com" title="mailto : yoo188@naver.com" target="_blank">yoo188@naver.com</a>
 						</dd>
 					</dl>
-					<dl data-aos="fade-right">
+					<dl>
 						<dt><img src="./include/img/ic_blog.svg" alt="blog"></dt>
 						<dd>
 							<a href="https://amanda.tistory.com" title="https://amanda.tistory.com" target="_blank">https://amanda.tistory.com</a>
@@ -450,7 +448,5 @@
 			</p>
 		</div>
 	</div>
-
-	<script>AOS.init();</script>
 </body>
 </html>
